@@ -211,7 +211,13 @@ Inlined Tcl commands will emit optimized code for the most common
 use cases when this option is enabled.
 This option is enabled by the <span style="font-family: monospace;">+O </span>option.<br>
 <br>
-<span style="font-family: monospace;"></span> <span
- style="font-family: monospace;"></span>
+<span style="font-family: monospace; font-weight: bold;">+inline-expr</span><br>
+<br>
+The <span style="font-family: monospace;">+inline-expr</span>
+option will emit inlined code for <code>expr</code> commands
+and expr arguments to commands like <code>if</code>, <code>while</code>,
+and <code>for</code>.
+This option is enabled by the <span style="font-family: monospace;">+O </span>option.<br>
+<br>
 </body>
 </html>
